# cerwu

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.ipynb  makefile  pyproject.toml
conf/: cifar_base.yaml  imagenet_base.yaml  wikitext_base.yaml
conf/calibration/: cifar10.yaml  cifar10_small.yaml  imagenet.yaml  wikitext.yaml
conf/compression/: benchmark.yaml  cerwu.yaml  optq-rd.yaml  optq.yaml  rtn.yaml
conf/evaluation/: cifar10.yaml  cifar10_small.yaml  imagenet.yaml  wikitext.yaml
conf/hydra/launcher/: galvani_slurm.yaml  galvani_slurm_big.yaml  galvani_slurm_very_big.yaml
conf/logger/: info.yaml  performance.yaml
conf/network/: convnext_tiny.yaml  mobilenetv3_large.yaml  mobilenetv3_small.yaml  resnet101_imagenet.yaml  resnet152_imagenet.yaml  resnet18_cifar10.yaml  resnet18_imagenet.yaml  resnet34_cifar10.yaml  resnet34_imagenet.yaml  resnet50_cifar10.yaml  resnet50_imagenet.yaml  vgg16.yaml
scripts/: calc_hessians.py  estimate_overheads.ipynb  experiment_runner.py  plots_neurips2025.ipynb  plots_neurips_style.py
src/: bindings.cpp
src/cpp/: entropy_model.cpp  entropy_model.h  fast_quant.cpp  fast_quant.h  gptq.cpp  gptq.h
src/nn_compression/: __init__.py
src/nn_compression/_interfaces/: __init__.py
src/nn_compression/coding/: __init__.py  _deepcabac.py  _nncodec.py
src/nn_compression/cv/: __init__.py  _datasets.py  _model.py
src/nn_compression/evaluation/: __init__.py  _rd_quant.py
src/nn_compression/experiments/: __init__.py  _db_manager.py  _interfaces.py  _logger.py  _models.py
src/nn_compression/networks/: __init__.py  _cholesky_approximator.py  _hessian.py  _utils.py
src/nn_compression/nlp/: __init__.py  _datasets.py  _models.py  _perplexity.py
src/nn_compression/quantisation/: __init__.py  _entropy_quantisation.py  _interfaces.py  _quant_models.py  _rd_quant_free_functions.py  _scaling.py
tests/: resnet18_cifar10_5000.pt  test_ab_tests.py  test_cpp_bindings.py  test_deepcabac_actual_coding.py  test_groupsize.py  test_rate_estimation.py  test_rd_quantisation_nets.py  test_scaling.py  test_weight_to_idx.py
